--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fortube contract",
   "main": "truffle-config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "merge": "sol-merger \"./contracts/*.sol\" ./merged"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bignumber.js": "^9.0.0",
+    "sol-merger": "^3.1.0",
     "truffle": "^5.1.14",
     "truffle-hdwallet-provider": "^1.0.17"
   }
