--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "truffle-config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "merge": "sol-merger \"./contracts/*.sol\" ./merged"
+    "merge": "sol-merger \"contracts\\*.sol\" merged"
   },
   "repository": {
     "type": "git",
